update readme for selenium appium conf 2026
Co-authored-by: Srinivasan Sekar <srinivasan.sekar1990@gmail.com>